; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/hccontrol/extr_util.c_hci_manufacturer2str.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/hccontrol/extr_util.c_hci_manufacturer2str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hci_manufacturer2str.t = internal constant [65 x i8*] [i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.30, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.35, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.37, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.38, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.39, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.40, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.41, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.42, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.43, i32 0, i32 0), i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.44, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.45, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.46, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.47, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.48, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.49, i32 0, i32 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.50, i32 0, i32 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.51, i32 0, i32 0), i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.52, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.53, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.54, i32 0, i32 0), i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.55, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.56, i32 0, i32 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.57, i32 0, i32 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.58, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.59, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.60, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.61, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.62, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.63, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.64, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [30 x i8] c"Ericsson Technology Licensing\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"Nokia Mobile Phones\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"Intel Corp.\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"IBM Corp.\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"Toshiba Corp.\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"3Com\00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"Microsoft\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"Lucent\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"Motorola\00", align 1
@.str.9 = private unnamed_addr constant [25 x i8] c"Infineon Technologies AG\00", align 1
@.str.10 = private unnamed_addr constant [24 x i8] c"Cambridge Silicon Radio\00", align 1
@.str.11 = private unnamed_addr constant [13 x i8] c"Silicon Wave\00", align 1
@.str.12 = private unnamed_addr constant [15 x i8] c"Digianswer A/S\00", align 1
@.str.13 = private unnamed_addr constant [23 x i8] c"Texas Instruments Inc.\00", align 1
@.str.14 = private unnamed_addr constant [26 x i8] c"Parthus Technologies Inc.\00", align 1
@.str.15 = private unnamed_addr constant [21 x i8] c"Broadcom Corporation\00", align 1
@.str.16 = private unnamed_addr constant [20 x i8] c"Mitel Semiconductor\00", align 1
@.str.17 = private unnamed_addr constant [14 x i8] c"Widcomm, Inc.\00", align 1
@.str.18 = private unnamed_addr constant [12 x i8] c"Zeevo, Inc.\00", align 1
@.str.19 = private unnamed_addr constant [18 x i8] c"Atmel Corporation\00", align 1
@.str.20 = private unnamed_addr constant [32 x i8] c"Mitsubishi Electric Corporation\00", align 1
@.str.21 = private unnamed_addr constant [16 x i8] c"RTX Telecom A/S\00", align 1
@.str.22 = private unnamed_addr constant [19 x i8] c"KC Technology Inc.\00", align 1
@.str.23 = private unnamed_addr constant [9 x i8] c"Newlogic\00", align 1
@.str.24 = private unnamed_addr constant [17 x i8] c"Transilica, Inc.\00", align 1
@.str.25 = private unnamed_addr constant [31 x i8] c"Rohde & Schwartz GmbH & Co. KG\00", align 1
@.str.26 = private unnamed_addr constant [15 x i8] c"TTPCom Limited\00", align 1
@.str.27 = private unnamed_addr constant [26 x i8] c"Signia Technologies, Inc.\00", align 1
@.str.28 = private unnamed_addr constant [22 x i8] c"Conexant Systems Inc.\00", align 1
@.str.29 = private unnamed_addr constant [9 x i8] c"Qualcomm\00", align 1
@.str.30 = private unnamed_addr constant [9 x i8] c"Inventel\00", align 1
@.str.31 = private unnamed_addr constant [11 x i8] c"AVM Berlin\00", align 1
@.str.32 = private unnamed_addr constant [16 x i8] c"BandSpeed, Inc.\00", align 1
@.str.33 = private unnamed_addr constant [13 x i8] c"Mansella Ltd\00", align 1
@.str.34 = private unnamed_addr constant [16 x i8] c"NEC Corporation\00", align 1
@.str.35 = private unnamed_addr constant [30 x i8] c"WavePlus Technology Co., Ltd.\00", align 1
@.str.36 = private unnamed_addr constant [8 x i8] c"Alcatel\00", align 1
@.str.37 = private unnamed_addr constant [23 x i8] c"Philips Semiconductors\00", align 1
@.str.38 = private unnamed_addr constant [15 x i8] c"C Technologies\00", align 1
@.str.39 = private unnamed_addr constant [15 x i8] c"Open Interface\00", align 1
@.str.40 = private unnamed_addr constant [18 x i8] c"R F Micro Devices\00", align 1
@.str.41 = private unnamed_addr constant [12 x i8] c"Hitachi Ltd\00", align 1
@.str.42 = private unnamed_addr constant [26 x i8] c"Symbol Technologies, Inc.\00", align 1
@.str.43 = private unnamed_addr constant [8 x i8] c"Tenovis\00", align 1
@.str.44 = private unnamed_addr constant [32 x i8] c"Macronix International Co. Ltd.\00", align 1
@.str.45 = private unnamed_addr constant [18 x i8] c"GCT Semiconductor\00", align 1
@.str.46 = private unnamed_addr constant [16 x i8] c"Norwood Systems\00", align 1
@.str.47 = private unnamed_addr constant [23 x i8] c"MewTel Technology Inc.\00", align 1
@.str.48 = private unnamed_addr constant [20 x i8] c"ST Microelectronics\00", align 1
@.str.49 = private unnamed_addr constant [9 x i8] c"Synopsys\00", align 1
@.str.50 = private unnamed_addr constant [27 x i8] c"Red-M (Communications) Ltd\00", align 1
@.str.51 = private unnamed_addr constant [11 x i8] c"Commil Ltd\00", align 1
@.str.52 = private unnamed_addr constant [46 x i8] c"Computer Access Technology Corporation (CATC)\00", align 1
@.str.53 = private unnamed_addr constant [25 x i8] c"Eclipse (HQ Espana) S.L.\00", align 1
@.str.54 = private unnamed_addr constant [25 x i8] c"Renesas Technology Corp.\00", align 1
@.str.55 = private unnamed_addr constant [21 x i8] c"Mobilian Corporation\00", align 1
@.str.56 = private unnamed_addr constant [6 x i8] c"Terax\00", align 1
@.str.57 = private unnamed_addr constant [33 x i8] c"Integrated System Solution Corp.\00", align 1
@.str.58 = private unnamed_addr constant [41 x i8] c"Matsushita Electric Industrial Co., Ltd.\00", align 1
@.str.59 = private unnamed_addr constant [19 x i8] c"Gennum Corporation\00", align 1
@.str.60 = private unnamed_addr constant [19 x i8] c"Research In Motion\00", align 1
@.str.61 = private unnamed_addr constant [16 x i8] c"IPextreme, Inc.\00", align 1
@.str.62 = private unnamed_addr constant [23 x i8] c"Systems and Chips, Inc\00", align 1
@.str.63 = private unnamed_addr constant [19 x i8] c"Bluetooth SIG, Inc\00", align 1
@.str.64 = private unnamed_addr constant [24 x i8] c"Seiko Epson Corporation\00", align 1
@.str.65 = private unnamed_addr constant [2 x i8] c"?\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hci_manufacturer2str(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @SIZE(i8** getelementptr inbounds ([65 x i8*], [65 x i8*]* @hci_manufacturer2str.t, i64 0, i64 0))
  %5 = icmp sge i32 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %12

7:                                                ; preds = %1
  %8 = load i32, i32* %2, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds [65 x i8*], [65 x i8*]* @hci_manufacturer2str.t, i64 0, i64 %9
  %11 = load i8*, i8** %10, align 8
  br label %12

12:                                               ; preds = %7, %6
  %13 = phi i8* [ getelementptr inbounds ([2 x i8], [2 x i8]* @.str.65, i64 0, i64 0), %6 ], [ %11, %7 ]
  ret i8* %13
}

declare dso_local i32 @SIZE(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
